# Forge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.sandbox-node  Dockerfile.sandbox-python  Dockerfile.worker  README.md  SECURITY.md  alembic.ini  check.py  clean_migrations.py  docker-compose.yml  fetch_logs.py  pyproject.toml  reset_db.py  run_all_tests.py  run_migrations.py  scratch_ts.py  scratch_ts2.py  start_api_detached.py  start_pg.py  start_redis_detached.py  start_worker_detached.py  test_db.py  test_redis.py
.github/: CONTRIBUTING.md
01/: 01_FOUNDATION.md  02_CORE_ENGINE.md  03_REPOSITORY_COGNITION.md  04_PLANNER.md  09_CLAUDE.md
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.sandbox-node  Dockerfile.worker
forge_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
migrations/: env.py
rfc-01/: RFC-001_Part-1_Repository_Import_and_Memory_Bootstrap.md  RFC-001_Part-2_Repository_Import_Pipeline.md  RFC-001_Part-3_Repository_Scanner_Internals.md  RFC-001_Part-4_Data_Model_APIs_Events.md  RFC-001_Part-5_Production_Readiness.md
rfc-02/: RFC-002_Part-1_Repository_Memory_Engine.md  RFC-002_Part-2_Graph_Construction_and_Context_Ranking.md  RFC-002_Part-3_Indexing_Cache_and_Prompt_Assembly.md  RFC-002_Part-4_Production_Architecture.md
rfc-03/: RFC-003_Part-1_Planning_Engine.md  RFC-003_Part-2_Task_Graphs_and_Scheduling.md  RFC-003_Part-3_Tool_Selection_and_Replanning.md
rfc-04/: RFC-004_Part-1_Execution_Engine.md  RFC-004_Part-2_Execution_DAG_and_Sandbox.md  RFC-004_Part-3_File_Mutation_and_Git.md
rfc-05/: RFC-005_Part-1_Verification_and_Self_Repair.md  RFC-005_Part-2_Verification_DAG_and_Repair.md  RFC-005_Part-3_Autonomous_Recovery_and_MultiPass_Repair.md  RFC-005_Part-4_Production_Architecture.md
rfc-06/: RFC-006_Part-1_AI_Context_Engine.md  RFC-006_Part-2_Retrieval_and_Model_Routing.md  RFC-006_Part-3_Response_Normalization_and_Guardrails.md  RFC-006_Part-4_Production_Architecture.md
rfc-07/: RFC-007_Part-1_Frontend_Architecture.md  RFC-007_Part-2_Design_System_and_Component_Architecture.md  RFC-007_Part-3_Product_Workflows_and_Execution_Experience.md  RFC-007_Part-4_State_Data_and_Real-Time_Platform.md  RFC-007_Part-5_Performance_Testing_Deployment_and_Production_Readiness.md
rfc-08/: RFC-008_Part-1_Platform_Architecture_and_Environment_Model.md  RFC-008_Part-2_Containers_Orchestration_Sandboxing_and_Networking.md  RFC-008_Part-3_CICD_Release_Engineering_and_Supply_Chain.md  RFC-008_Part-4_Observability_SRE_Scaling_and_Reliability.md  RFC-008_Part-5_Security_Backups_Disaster_Recovery_Cost_and_Runbooks.md
rfc-09/: RFC-009_Part-1_Extension_Architecture_and_Plugin_SDK.md  RFC-009_Part-2_Tool_Runtime_Invocation_and_Sandbox_Execution.md  RFC-009_Part-3_MCP_Integration_and_External_Tool_Interoperability.md  RFC-009_Part-4_Plugin_Registry_Publishing_Versioning_and_Marketplace.md  RFC-009_Part-5_Plugin_Security_Governance_and_Trust_Model.md  RFC-009_Part-6_Testing_Observability_Operations_and_Production_Readiness.md
rfc-10/: RFC-010_Part-1_Enterprise_Architecture_Organizations_and_Multi-Tenancy.md  (+6 more)
scripts/: init-db.sql  (+2 more)
(+122 files in other folders)
