[project]
name = "forge-ai"
version = "0.1.0-alpha.1"
description = "Forge AI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "structlog",
    "httpx",
    "python-multipart",
    "orjson",
    "tenacity",
    "uuid7",
    "jinja2>=3.1.6",
    "networkx>=3.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "pyright",
    "mypy",
    "factory-boy",
    "faker",
    "respx",
    "anyio"
]

[tool.ruff]
target-version = "py312"
line-length = 150
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
lint.ignore = ["E501", "F841", "E402", "E712", "E741", "N806", "B008", "F401", "SIM105", "TC003", "N999", "UP", "B", "SIM", "TCH", "N", "F403", "W291"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
