[project]
name = "forge-ai"
version = "0.1.0-alpha.1"
description = "Forge AI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "redis[hiredis]",
    "structlog",
    "httpx",
    "python-multipart>=0.0.32",
    "pytokens>=0.4.1",
    "PyJWT>=2.8.0",
    "pyyaml>=6.0.3",
    "orjson",
    "tenacity",
    "uuid7",
    "jinja2>=3.1.6",
    "networkx>=3.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python",
    "python-json-logger>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "black",
    "pyright",
    "mypy",
    "factory-boy",
    "faker",
    "respx",
    "anyio"
]

[tool.ruff]
target-version = "py312"
line-length = 150
lint.select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
lint.ignore = ["E501", "B008", "E402", "SIM105", "N806", "N999", "TC003", "B904", "F403", "UP007", "SIM108"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

include = [
    "apps/api",
    "packages",
    "services",
    "migrations",
    "scripts",
    "tests",
]

exclude = [
    "skills",
    "temp-repo",
    "01",
    "rfc-*",
    "apps/frontend",
    "**/node_modules",
    "**/.next",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/.venv*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "apps.api*",
    "packages*",
    "services*",
]
exclude = [
    "tests*",
    "skills*",
    "migrations*",
    "temp-repo*",
]
namespaces = true
